<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FadCam</string>
    <string name="app_icon_description">Choose an icon and name for your app. This will change how it appears on your home screen.</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="accessibility_thumbnail_progress">%1$d%% watched</string>
    <string name="fadsec_info">FadCam is part of the FadSec Lab suite. For more information, click on \'view source code\' below.</string>
    <string name="app_description">
        <![CDATA[
    FadCam is an ad-free, open-source video recording app that prioritizes privacy by not tracking or collecting any data. It is available exclusively on GitHub and through the official links mentioned in the README.
    <br/><br/>
    FadCam has been featured in popular YouTube channels like <font color="#cfbafd">HowToMen</font> and <font color="#cfbafd">Xtream Droid</font>, as well as discussed in <font color="#cfbafd">GrapheneOS</font> and 55+ other notable spots.
    ]]>
    </string>
    <string name="view_source_code">View Source Code</string>
    <string name="buy_me_a_coffee">Buy me a coffee ☕</string>
    <string name="contact">Contact</string>
    <string name="send_email">Send email</string>
    <string name="join_community">Join community for help, sharing ideas, and future app updates</string>
    <string name="readme_github_subtitle">Source code &amp; releases</string>
    <string name="readme_discord_subtitle">Join the community</string>
    <string name="website_title">Website</string>
    <string name="readme_website_subtitle">Official site</string>
    <string name="privacy_information">Privacy Information</string>
    <string name="copyright_info"> 2024-2025 https://fadcam.faded.dev\nLicensed under GPL-3.0</string>
    <string-array name="video_resolutions_keys">
        <item>7680x4320</item>        
        <item>3840x2160</item>        
        <item>2560x1440</item>        
        <item>1920x1080</item>        
        <item>1280x720</item>        
        <item>640x480</item>        
        <item>720x480</item>        
        <item>480x360</item>        
    </string-array>
    <string-array name="video_resolutions_values">
        <item>8K</item>        
        <item>4K</item>        
        <item>2K</item>        
        <item>FHD</item>        
        <item>HD</item>        
        <item>SD</item>        
        <item>SD</item>        
        <item>SD</item>        
    </string-array>
    <string name="mainpage_storage_indicator" formatted="false">\n                                            <![CDATA[
    <font color=\'#FFFFFF\' style=\'font-size:16sp;\'><b>Available:</b></font><br>
    <font color=\'#CCCCCC\' style=\'font-size:14sp;\'>%.2f GB / %.2f GB</font><br><br>
    <font color=\'#FFFFFF\' style=\'font-size:16sp;\'><b>Record time (est.):</b></font><br>
    <font color=\'#CCCCCC\' style=\'font-size:14sp;\'>FHD: %s<br>HD: %s<br>SD: %s</font><br><br>
    <font color=\'#FFFFFF\' style=\'font-size:16sp;\'><b>Elapsed time:</b></font><br>
    <font color=\'#77DD77\' style=\'font-size:14sp;\'>%02d:%02d</font><br>
    <font color=\'#FFFFFF\' style=\'font-size:16sp;\'><b>Remaining time:</b></font><br>
    <font color=\'#E43C3C\' style=\'font-size:14sp;\'>%s</font>
    ]]>\n</string>
    <string-array name="tips_widget">
        <item>1/11 | Long press preview to disable it.</item>
        <item>2/11 | Long press date widget to select clock display.</item>
        <item>3/11 | Storage widget updates recording space in real-time.</item>
        <item>4/11 | Stats widget shows total videos and space used.</item>
        <item>5/11 | Change video quality in settings (HD, SD, FHD).</item>
        <item>6/11 | Low on space? Adjust video quality for more recording time.</item>
        <item>7/11 | Add watermark to videos in settings.</item>
        <item>8/11 | Embed precise location in watermark via settings.</item>
        <item>9/11 | Record with front camera? Choose in settings.</item>
        <item>10/11 | Your preferences are saved and applied seamlessly.</item>
        <item>11/11 | Need help? Join our Discord via the About section.</item>
    </string-array>
    <string name="mainpage_video_info" formatted="false">\n                                            <![CDATA[
    <font color=\'#FFFFFF\' style=\'font-size:12sp;\'><b>Videos: </b></font>
    <font color=\'#D3D3D3\' style=\'font-size:11sp;\'>%d</font><br>
    <font color=\'#FFFFFF\' style=\'font-size:12sp;\'><b>Used: </b></font>
    <font color=\'#D3D3D3\' style=\'font-size:11sp;\'>%s</font>
    ]]>\n</string>
    <string name="stats_label_videos">Videos:</string>
    <string name="stats_label_used">Used:</string>
    <string name="button_start">Start</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_resume">Resume</string>
    <string name="fadrec_start_screen_recording">Start Screen Recording</string>
    <string name="fadrec_stop_screen_recording">Stop Screen Recording</string>
    <string name="fadrec_pause_screen_recording">Pause Screen Recording</string>
    <string name="fadrec_resume_screen_recording">Resume Screen Recording</string>
    <string name="fadrec_screen_recording_started">Screen recording started</string>
    <string name="fadrec_screen_recording_stopped">Screen recording stopped</string>
    <string name="fadrec_screen_recording_paused">Screen recording paused</string>
    <string name="fadrec_screen_recording_resumed">Screen recording resumed</string>
    <string name="fadrec_notification_title">Screen Recording</string>
    <string name="fadrec_notification_recording">Recording screen…</string>
    <string name="fadrec_notification_paused">Recording paused</string>
    <string name="floating_controls_title">Menu</string>
    <string name="floating_controls_permission_needed">Overlay permission required</string>
    <string name="floating_controls_permission_title">Overlay Permission Required</string>
    <string name="floating_controls_permission_message">The floating quick menu appears as an overlay on top of other apps, providing instant access to recording controls from anywhere.\n\nTo enable this feature, you need to grant \"Display over other apps\" permission in the next screen.</string>
    <string name="floating_controls_permission_grant">Grant Permission</string>
    <string name="floating_menu_title">Quick Menu</string>
    <string name="floating_menu_start">Start Recording</string>
    <string name="floating_menu_start_short">Start</string>
    <string name="floating_menu_pause">Pause</string>
    <string name="floating_menu_resume">Resume</string>
    <string name="floating_menu_stop">Stop Recording</string>
    <string name="floating_menu_stop_short">Stop</string>
    <string name="annotation_notification_hide_menu">Hide menu</string>
    <string name="annotation_notification_show_menu">Show menu</string>
    <string name="floating_menu_annotations">Annotations</string>
    <string name="recording_controls">Recording Controls</string>
    <string name="annotations">Annotations</string>
    <string name="annotation_tools">Annotation Tools</string>
    <string name="enable_annotations">Enable Annotations</string>
    <string name="snap_guides">Snap Guides</string>
    <string name="add_text">Add Text</string>
    <string name="add_shape">Add Shape</string>
    <string name="fadrec_ready_to_record">Ready to capture screen</string>
    <string name="fadrec_ready_to_record_subtitle">Tap to begin</string>
    <string name="fadrec_permission_denied">Screen recording permission denied</string>
    <string name="fadrec_mode_title">FadRec • Screen Recording</string>
    <string name="fadrec_mute_audio">Mute recording audio</string>
    <string name="fadrec_unmute_audio">Unmute recording audio</string>
    <string name="fadrec_mic_permission_needed_title">Microphone Permission Needed</string>
    <string name="fadrec_mic_permission_needed_message">FadRec can\'t access your mic. You can record muted - no audio will be saved.</string>
    <string name="fadrec_record_muted">Record Muted</string>
    <string name="fadrec_audio_source_title">Audio Source</string>
    <string name="fadrec_audio_source_choose">Choose audio source</string>
    <string name="fadrec_audio_source_none">No Audio</string>
    <string name="fadrec_audio_source_mic">Microphone</string>
    <string name="fadrec_audio_source_internal">Device Audio (Internal)</string>
    <string name="video_recording_started">Recording started</string>
    <string name="video_recording_stopped">Recording stopped</string>
    <string name="video_recording_paused">Recording paused</string>
    <string name="video_recording_resumed">Recording resumed</string>
    <string name="current_camera">Current camera</string>
    <string name="recording_controls_title">AF · Exposure · Zoom</string>
    <string name="mainpage_camera_front">Front Camera</string>
    <string name="mainpage_camera_back">Back Camera</string>
    <string name="storage_available_space">Available space</string>
    <string name="recording_estimated_time">Estimated time</string>
    <string name="recording_time_left">Time left</string>
    <string name="recording_elapsed_time">Elapsed time</string>
    <string name="recording_remaining_time">Remaining time</string>
    <string name="home_elapsed_customize_title">Elapsed Time</string>
    <string name="nav_home">Home</string>
    <string name="nav_records">Records</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_remote">Remote</string>
    <string name="nav_faditor_mini">Faditor</string>
    <string name="nav_lab">Lab</string>
    <string name="torch_shortcut_short_label">Torch</string>
    <string name="torch_shortcut_long_label">Toggle Torch</string>
    <string name="torch_shortcut_disabled">Torch toggle is currently unavailable</string>
    <string name="start_recording">Start</string>
    <string name="stop_recording">Stop</string>
    <string name="notification_preset_title">Notification Preset</string>
    <string name="notification_preset_default">Default (Recording)</string>
    <string name="notification_preset_system_update">System Update</string>
    <string name="notification_preset_downloading">Downloading</string>
    <string name="notification_preset_syncing">Syncing Data</string>
    <string name="notification_preset_custom">Custom Text</string>
    <string name="notification_hide_stop_button">Hide Stop Button</string>
    <string name="notification_custom_title">Custom Title</string>
    <string name="notification_custom_text">Custom Text</string>
    <string name="notification_preview_title">Preview</string>
    <string name="notification_setup_description">Customize how the recording notification appears</string>
    <string name="notification_setup_save">Save</string>
    <string name="notification_setup_cancel">Cancel</string>
    <string name="notification_setup_ok">OK</string>
    <string name="notification_custom_editor_title">Custom Notification</string>
    <string name="notification_custom_editor_helper">Set a title and description below. Changes save automatically.</string>
    <string name="notification_custom_title_placeholder">Title (e.g. System Update)</string>
    <string name="notification_custom_text_placeholder">Description (e.g. Update in progress)</string>
    <string name="remote_server_endpoints">Server Endpoints</string>
    <string name="remote_get_requests">GET Requests</string>
    <string name="remote_post_requests_remote_control">POST Requests (Remote Control)</string>
    <string name="remote_access_endpoints_desc">Access your streaming server via these HTTP endpoints</string>
    <string name="remote_control_via_api_desc">Control FadCam remotely via API calls</string>
</resources>