<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_house"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_records"
        android:icon="@drawable/ic_records_selector"
        android:title="@string/nav_records" />
    <item
        android:id="@+id/navigation_remote"
        android:icon="@drawable/unknown_icon0"
        android:title="@string/nav_remote" />
    <item
        android:id="@+id/navigation_faditor_mini"
        android:icon="@drawable/movie_edit_24px"
        android:title="@string/nav_faditor_mini" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/navigation_lab"
        android:icon="@drawable/biotech_24px"
        android:title="@string/nav_lab" />
</menu>
