<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:id="@+id/torch_toggle"
        android:enabled="true"
        android:icon="@drawable/flashlight_shortcut"
        android:shortcutShortLabel="@string/torch_shortcut_short_label"
        android:shortcutLongLabel="@string/torch_shortcut_long_label"
        android:shortcutDisabledMessage="@string/torch_shortcut_disabled">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fadcam.TorchToggleActivity"
            android:targetPackage="com.fadcam" />
    </shortcut>

    <shortcut
        android:id="@+id/record_start"
        android:enabled="true"
        android:icon="@drawable/start_shortcut"
        android:shortcutShortLabel="@string/start_recording"
        android:shortcutLongLabel="@string/start_recording">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fadcam.RecordingStartActivity"
            android:targetPackage="com.fadcam" />
    </shortcut>

    <shortcut
        android:id="@+id/record_stop"
        android:enabled="true"
        android:icon="@drawable/stop_shortcut"
        android:shortcutShortLabel="@string/stop_recording"
        android:shortcutLongLabel="@string/stop_recording">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.fadcam.RecordingStopActivity"
            android:targetPackage="com.fadcam" />
    </shortcut>
</shortcuts>